# igapy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/igapy/: __init__.py  accounts.py  cli.py  client.py  costs.py  exceptions.py  history.py  markets.py  operations.py  orders.py  prices.py  repeat.py  sentiment.py  session.py  streaming.py  utils.py  watchlists.py
tests/: conftest.py  test_accounts.py  test_cli.py  test_client.py  test_costs.py  test_exceptions.py  test_history.py  test_markets.py  test_operations.py  test_orders.py  test_prices.py  test_repeat.py  test_sentiment.py  test_session.py  test_streaming.py  test_utils.py  test_watchlists.py
